--- a/lightingLED/lightingLED.vcxproj
+++ b/lightingLED/lightingLED.vcxproj
@@ -77,6 +77,7 @@
     <DebuggerFlavor>VisualMicroDebugger</DebuggerFlavor>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="..\README.md" />
     <None Include="lightingLED.ino">
       <FileType>CppCode</FileType>
     </None>
